--- a/nginx.conf
+++ b/nginx.conf
@@ -56,9 +56,9 @@ http {
     client_max_body_size 10G;
     fastcgi_buffers 64 4K;
 
-    rewrite ^/caldav(.*)$ /remote.php/caldav$1 redirect;
-    rewrite ^/carddav(.*)$ /remote.php/carddav$1 redirect;
-    rewrite ^/webdav(.*)$ /remote.php/webdav$1 redirect;
+    rewrite ^/caldav(.*)$ /remote.php/dav$1 redirect;
+    rewrite ^/carddav(.*)$ /remote.php/dav$1 redirect;
+    rewrite ^/webdav(.*)$ /remote.php/dav$1 redirect;
 
     error_page 403 /core/templates/403.php;
     error_page 404 /core/templates/404.php;
@@ -69,6 +69,9 @@ http {
     add_header X-Robots-Tag none;
     add_header X-Download-Options noopen;
     add_header X-Permitted-Cross-Domain-Policies none;
+    add_header Referrer-Policy no-referrer;
+
+    fastcgi_hide_header X-Powered-By;
 
     location = /robots.txt {
       allow all;
@@ -76,31 +79,76 @@ http {
       access_log off;
     }
 
-    location ~ ^/(data|config|\.ht|db_structure\.xml|README) {
-      deny all;
+    location = /.well-known/carddav {
+      return 301 /remote.php/dav/;
+    }
+
+    location = /.well-known/caldav {
+      return 301 /remote.php/dav/;
     }
 
     location / {
-      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
-      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json last;
-      rewrite ^/.well-known/carddav /remote.php/carddav/ redirect;
-      rewrite ^/.well-known/caldav /remote.php/caldav/ redirect;
-      rewrite ^(/core/doc/[^\/]+/)$ $1/index.html;
-      try_files $uri $uri/ index.php;
+      rewrite ^ /index.php$request_uri;
     }
 
-    location ~ ^(.+?\.php)(/.*)?$ {
-      try_files $1 = 404;
-      include fastcgi_params;
-      fastcgi_param modHeadersAvailable true;
-      fastcgi_param SCRIPT_FILENAME $document_root$1;
-      fastcgi_param PATH_INFO $2;
-      fastcgi_pass unix:/var/run/php-fpm.sock;
+    location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+        deny all;
     }
 
-    location ~* ^.+\.(jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ {
-      expires 30d;
-      access_log off;
+    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
+        deny all;
+    }
+
+    location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTPS off;
+        #Avoid sending the security headers twice
+        fastcgi_param modHeadersAvailable true;
+        fastcgi_param front_controller_active true;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_intercept_errors on;
+        fastcgi_request_buffering off;
+    }
+
+    location ~ ^/(?:updater|ocs-provider)(?:$|/) {
+        try_files $uri/ =404;
+        index index.php;
+    }
+
+    # Adding the cache control header for js and css files
+    # Make sure it is BELOW the PHP block
+    location ~ \.(?:css|js|woff|svg|gif)$ {
+        try_files $uri /index.php$request_uri;
+        add_header Cache-Control "public, max-age=15778463";
+        # Add headers to serve security related headers (It is intended to
+        # have those duplicated to the ones above)
+        # Before enabling Strict-Transport-Security headers please read into
+        # this topic first.
+        # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
+        #
+        # WARNING: Only add the preload option once you read about
+        # the consequences in https://hstspreload.org/. This option
+        # will add the domain to a hardcoded list that is shipped
+        # in all major browsers and getting removed from this list
+        # could take several months.
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Robots-Tag none;
+        add_header X-Download-Options noopen;
+        add_header X-Permitted-Cross-Domain-Policies none;
+        add_header Referrer-Policy no-referrer;
+
+        # Optional: Don't log access to assets
+        access_log off;
+    }
+
+    location ~ \.(?:png|html|ttf|ico|jpg|jpeg)$ {
+        try_files $uri /index.php$request_uri;
+        # Optional: Don't log access to other assets
+        access_log off;
     }
   }
 }
