--- a/nginx.conf
+++ b/nginx.conf
@@ -88,7 +88,7 @@ http {
     }
 
     location / {
-      rewrite ^ /index.php$request_uri;
+      rewrite ^ /index.php;
     }
 
     location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
@@ -99,18 +99,20 @@ http {
         deny all;
     }
 
-    location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param HTTPS off;
-        #Avoid sending the security headers twice
-        fastcgi_param modHeadersAvailable true;
-        fastcgi_param front_controller_active true;
-        fastcgi_pass unix:/var/run/php-fpm.sock;
-        fastcgi_intercept_errors on;
-        fastcgi_request_buffering off;
+    location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+)\.php(?:$|\/) {
+	    fastcgi_split_path_info ^(.+?\.php)(\/.*|)$;
+	    try_files $fastcgi_script_name =404;
+	    include fastcgi_params;
+	    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	    fastcgi_param PATH_INFO $path_info;
+	    fastcgi_param HTTPS on;
+# Avoid sending the security headers twice
+	    fastcgi_param modHeadersAvailable true;
+# Enable pretty urls
+	    fastcgi_param front_controller_active true;
+	    fastcgi_pass php-handler;
+	    fastcgi_intercept_errors on;
+	    fastcgi_request_buffering off;
     }
 
     location ~ ^/(?:updater|ocs-provider)(?:$|/) {
