--- a/nginx.conf
+++ b/nginx.conf
@@ -104,13 +104,13 @@ http {
 	    try_files $fastcgi_script_name =404;
 	    include fastcgi_params;
 	    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	    fastcgi_param PATH_INFO $path_info;
-	    fastcgi_param HTTPS on;
+	    fastcgi_param PATH_INFO $fastcgi_path_info;
+	    fastcgi_param HTTPS off;
 # Avoid sending the security headers twice
 	    fastcgi_param modHeadersAvailable true;
 # Enable pretty urls
 	    fastcgi_param front_controller_active true;
-	    fastcgi_pass php-handler;
+	    fastcgi_pass unix:/var/run/php-fpm.sock;
 	    fastcgi_intercept_errors on;
 	    fastcgi_request_buffering off;
     }
